kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lloyds-deployment
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: lloyds-api
  template:
    metadata:
      labels:
        app: lloyds-api
    spec:
      containers:
      - name: lloyds-app-container
        image: europe-west2-docker.pkg.dev/lloyds-api-123/lloyds-repository/lloyds-api-image:v1.0.4
        ports:
        - containerPort: 3000 
        resources: 
          requests:
            memory: "64Mi"
            cpu: "100m" # 0.1 CPU core
          limits:
            memory: "128Mi"
            cpu: "500m" # 0.5 CPU core
        readinessProbe:
          httpGet:
            path: /api 
            port: 3000
          initialDelaySeconds: 10 
          periodSeconds: 10     
          timeoutSeconds: 5      
          failureThreshold: 3   
        livenessProbe:
          httpGet:
            path: /api 
            port: 3000
          initialDelaySeconds: 20 
          periodSeconds: 20
          timeoutSeconds: 5
          failureThreshold: 3

      - name: cloud-sql-proxy
        image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.8.0
        args:
          - "--structured-logs"
          - "--port=5432"
          - "lloyds-api-123:europe-west2:lloyds-db-instance"
        securityContext:
          runAsNonRoot: true 
        resources:
          requests:
            memory: "20Mi"
            cpu: "50m"
          limits:
            memory: "50Mi"
            cpu: "100m"
