kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lloyds-service
spec:
  type: NodePort
  selector:
    app: lloyds-api 
  ports:
  - protocol: TCP
    port: 80       
    targetPort: 3000
