kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lloyds-api-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "lloyds-api-static-ip" 
    networking.gke.io/managed-certificates: "lloyds-api-certificate"  
    kubernetes.io/ingress.allow-http: "false"
spec:
  rules:
  - host: api.andrewssite.xyz 
    http:
      paths:
      - path: /* 
        pathType: ImplementationSpecific 
        backend:
          service:
            name: lloyds-service      
            port:
              number: 80
